# riddle

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Shuttle.toml
.github/workflows/: docker-image.yml  docker-publish.yml
crates/riddle_app/: Cargo.toml
crates/riddle_app/src/: discord.rs  lib.rs  openai.rs
crates/riddle_shuttle/: Cargo.toml
crates/riddle_shuttle/src/: main.rs
riddle_bin/: Cargo.toml
riddle_bin/src/: logger.rs  main.rs
src/: discord.rs  lib.rs  main.rs  openai.rs
