[package]
name = "riddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
log = "0.4.17"
reqwest = {version = "0.11.14", features=["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serenity = {version = "0.11.5", features = ["reqwest"]}
simplelog = "0.12.0"
tokio = {version = "1.25.0", features = ["full"]}
