[package]
name = "riddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serenity = { version = "0.11.5", features = ["reqwest", "rustls_backend"] }
shuttle-secrets = "0.10.0"
shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
simplelog = "0.12.0"
tokio = {version = "1", features = ["full"]}
