[package]
name = "riddle_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
simplelog = "0.12.0"
tokio = { version = "1", features = ["full"] }
riddle = { path = ".." }
log = "0.4.17"
